[package]
name = "fixme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cynic = {version = "3.8.0", features = ["http-surf"]}
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
surf = "2.3.2"
tokio = {version = "1.40.0", features = ["full"]}
toml = "0.8.19"

[build-dependencies]
cynic-codegen = {version = "3.8.0"}
